<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gendroid TWO</string>
    <string name="input_password">input password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help_input_password">Please input password to use Gendroid TWO</string>
    <string name="access_granted">Access granted</string>
    <string name="access_denied">Access denied</string>
    <string name="back_onemore">Tap back key once more to exit Gendroid TWO</string>
    <string name="help_about">For more information, visit</string>
    <string name="url_gendroid">http://gendroid.com</string>
    <string name="help_about_icon">Dark Grass Icons by Alessandro Rei used under GPL</string>
    <string name="url_icon">http://gendroid.com</string>
    <string name="pref_general">General</string>
    <string name="pref_use_password">Use password</string>
    <string name="pref_use_password_detail">You need to input password to use this application</string>
    <string name="pref_use_oneday">Start with D+1</string>
    <string name="pref_use_oneday_detail">Regard D-day as D+1</string>
    <string name="pref_password">password</string>
    <string name="pref_widget">Widget</string>
    <string name="pref_refresh_on_click">Refresh on click</string>
    <string name="pref_refresh_on_click_detail">Refresh widget additionally on clicking a widget</string>
    <string name="pref_tap_behavior">Tap behavior</string>
    <string name="pref_tap_behavior_detail">Tapping widgets start this action</string>
    <string name="pref_tap_nothing">Nothing</string>
    <string name="pref_tap_launch_app">Launch application</string>
    <string name="pref_tap_hide">Hide widget</string>
    <string name="pref_font_color">Font color</string>
    <string name="pref_font_color_detail">Set font color for new widgets</string>
    <string name="pref_font_color_black">Black</string>
    <string name="pref_font_color_white">White</string>
    <string name="pref_font_color_dkgray">Dark Gray</string>
    <string name="pref_font_color_gray">Gray</string>
    <string name="pref_font_color_ltgray">Light Gray</string>
    <string name="pref_font_color_red">Red</string>
    <string name="pref_font_color_green">Green</string>
    <string name="pref_font_color_blue">Blue</string>
    <string name="pref_font_color_yellow">Yellow</string>
    <string name="pref_font_color_cyan">Cyan</string>
    <string name="pref_font_color_magenta">Magenta</string>
    <string name="add">Add</string>
    <string name="preferences">Preferences</string>
    <string name="exit">Exit</string>
    <string name="title">Add a new D-day..</string>
    <string name="title_edit">Edit D-day..</string>
    <string name="tap_title">Tap to enter title</string>
    <string name="no_title">no title</string>
    <string name="no_pick_date">Please pick date</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_icon">icon</string>
    <string name="dday">D-day</string>
    <string name="nodata_create">No data, register new one through Menu > Add.</string>    
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_desc">This item will be deleted</string>
    <string name="already_exist">Already exist</string>
    <string name="edit_done">Changed</string>
    <string name="more">Fetching more..</string>
    <string name="loading">Loading..</string>
    
    <string-array name="entries_tap_behavior"  translatable="false">
        <item>nothing</item>
        <item>app</item>
        <item>hide</item>
    </string-array>
    
    <string-array name="entries_font_color"  translatable="false">
        <item>black</item>
        <item>white</item>
        <item>dkgray</item>
        <item>gray</item>
        <item>ltgray</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>cyan</item>
        <item>magenta</item>
    </string-array>
    
</resources>