<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<TextView android:id="@+id/Text_main_help" 
    android:layout_width="wrap_content" 
    android:text="@string/help_input_password"
    android:textSize="26dip" 
    android:layout_height="wrap_content"
    android:layout_marginTop="10dip"
    android:layout_marginBottom="10dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip">
</TextView>

<Button android:id="@+id/Button_input_password_manually" 
    android:layout_width="wrap_content" 
    android:layout_gravity="center" 
    android:layout_height="wrap_content" 
    android:text="@string/input_password"
    android:layout_marginTop="10dip">
</Button>

<TextView android:id="@+id/Text_about" 
    android:layout_width="wrap_content" 
    android:text="@string/help_about"
    android:textSize="20dip" 
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip">
</TextView>

<TextView android:id="@+id/Text_url" 
    android:layout_width="wrap_content" 
    android:text="@string/url_gendroid"
    android:textSize="20dip" 
    android:layout_height="wrap_content"
    android:layout_marginTop="5dip"
    android:layout_marginBottom="10dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip">
</TextView>

<TextView android:id="@+id/Text_about_icon" 
    android:layout_width="wrap_content" 
    android:text="@string/help_about_icon"
    android:textSize="16dip" 
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip">
</TextView>

</LinearLayout>
