<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ScrollView android:id="@+id/sv_create_item" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="5dip"
        android:paddingBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
                
        <EditText
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="250dip"
            android:maxLength="128"
            android:gravity="fill_horizontal"
            android:inputType="text"
            android:hint="@string/tap_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
            
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="5dip"
        android:paddingRight="1dip"
        android:orientation="horizontal" >
	            
            <TextView android:id="@+id/dateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingRight="10dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
                
            <Button android:id="@+id/pickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:paddingRight="10dip"/>
                
            <Button android:id="@+id/pickIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_icon"/>
            
        </LinearLayout>
      
    </LinearLayout>
    </ScrollView>
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c6c3c6"
        android:minHeight="54dip"
        android:orientation="horizontal"
        android:paddingTop="4dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip">
        <Button android:id="@+id/OK" 
            android:text="@string/ok"
            android:layout_width="0dip"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:maxLines="2"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/cancel" 
            android:text="@string/cancel"
            android:layout_width="0dip"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:maxLines="2"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
